task1/policies/kyverno/verify-signed-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-ledger-api-signed-images
  annotations:
    policies.kyverno.io/title: Verify Signed Images
    policies.kyverno.io/category: Software Supply Chain
    policies.kyverno.io/severity: high
spec:
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: verify-ghcr-keyless-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - payments
      verifyImages:
        - imageReferences:
            - "ghcr.io/*/ledger-api:*"
          mutateDigest: true
          verifyDigest: true
          required: true
          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/*/*/.github/workflows/*@refs/heads/main"
                    issuer: "https://token.actions.githubusercontent.com"
                    rekor:
                      url: https://rekor.sigstore.dev
